Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46515

Canvas3D ignores alpha context attribute

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.6.0 RC
    • 5.5.0 Beta
    • Canvas3D
    • None
    • 4a76baffc1dfc5d9fee6cd8f41f95707b5b5a74a

      Canvas3D at the moment ignores the alpha flag. If alpha flag is given the created target FBO does have alpha channel, but that is then ignored by the QSGSimpleTextureNode based renderer (QSGSimpleTextureNode uses QSGOpaqueTextureMaterial internally). Allowing users to use the rendered alpha in QtQuick scene composition could be beneficial in some use cases, but it does raise potential issues with anti-aliasing.

        For Gerrit Dashboard: QTBUG-46515
        # Subject Branch Project Status CR V

            e0348803 Miikka Heikkinen
            pakerane Pasi Keränen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes