Added support for 'alpha' context attribute.

Use QQuickWindow::TextureHasAlphaChannel texture option in render
node when 'alpha' context attribute is true. The 'alpha'
attribute now defaults to true as per WebGL spec.

Also fixed the default values and the documentation of other context
attributes to match WebGL spec.

[ChangeLog][Context3D] Support for 'alpha' context attribute

Task-number: QTBUG-46515
Change-Id: Ic4d4e46e4e323517343690a2916b6b9363107a87
Reviewed-by: Pasi Keränen <pasi.keranen@digia.com>