src/imports/qtcanvas3d/contextattributes.cpp
@@ -61,11 +61,11 @@ QT_CANVAS3D_BEGIN_NAMESPACE
  */
 CanvasContextAttributes::CanvasContextAttributes(QObject *parent) :
     CanvasAbstractObject(0, parent),
-    m_alpha(false),  // Should be true according to official WebGL spec. But ignored for now.
-    m_depth(false),
+    m_alpha(true),
+    m_depth(true),
     m_stencil(false),
-    m_antialias(false),
-    m_premultipliedAlpha(false),
+    m_antialias(true),
+    m_premultipliedAlpha(true),
     m_preserveDrawingBuffer(false),
     m_preferLowPowerToHighPerformance(false),
     m_failIfMajorPerformanceCaveat(false)
@@ -121,7 +121,9 @@ void CanvasContextAttributes::setFrom(const CanvasContextAttributes &source)
 
 /*!
  * \qmlproperty bool Canvas3DContextAttributes::alpha
- * Ignored. Defaults to \c{false}.
+ * Specifies whether the default render target of the Context3D has an alpha channel for the
+ * purposes of blending its contents with overlapping Qt Quick items.
+ * Defaults to \c{true}.
  */
 bool CanvasContextAttributes::alpha()  const
 {
@@ -141,7 +143,7 @@ void CanvasContextAttributes::setAlpha(bool value)
  * \qmlproperty bool Canvas3DContextAttributes::depth
  * Specifies whether a depth attachment is to be created and attached to the default render target
  * of the Context3D.
- * Defaults to \c{false}.
+ * Defaults to \c{true}.
  */
 bool CanvasContextAttributes::depth() const
 {
@@ -180,7 +182,7 @@ void CanvasContextAttributes::setStencil(bool value)
 /*!
  * \qmlproperty bool Canvas3DContextAttributes::antialias
  * Specifies whether antialiasing buffer is created for the default render target of the Context3D.
- * Defaults to \c{false}.
+ * Defaults to \c{true}.
  */
 bool CanvasContextAttributes::antialias() const
 {
@@ -198,7 +200,9 @@ void CanvasContextAttributes::setAntialias(bool value)
 
 /*!
  * \qmlproperty bool Canvas3DContextAttributes::premultipliedAlpha
- * Ignored. Defaults to \c{false}.
+ * Qt Quick always expects premultiplied alpha values when blending Qt Quick items together,
+ * so this property is ignored.
+ * Defaults to \c{true}.
  */
 bool CanvasContextAttributes::premultipliedAlpha() const
 {
